Changed project cards from flex to grid for more consistent alignment. fixed navbar inconsistencies

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -171,10 +171,19 @@ p {
     display: none;
     position: relative;
     top: 20%;
-    right: 12%;
+    /* right: 12% !important; */
     width: inherit;
     max-width: inherit;
 }
+
+ul .main-nav:nth-of-type(1) {
+    right: 0 !important;
+}
+
+.right-12 {
+    right: 12% !important;
+}
+
 .main-nav li {
     text-align: right;
     margin: 2em auto;
@@ -262,12 +271,19 @@ p {
     background-color: #33B8A8;
 }
 
-.project {
+.project-container {
     border: 1px solid #B8B8B8;
     border-radius: 10px;
-    margin: 25px 22px;
-    padding: 75px 21px 150px 17px;
     max-width: 1560px;
+    margin: 25px 22px;
+}
+
+.project {
+    /* border: 1px solid #B8B8B8;
+    border-radius: 10px; */
+    /* max-width: 1560px; */
+    /* margin: 25px 22px; */
+    padding: 75px 21px 150px 17px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -615,9 +631,15 @@ p {
     .project-content {
         margin-left: 3em;
     }
-    .project {
+
+    .project-container {
         width: 85%;
         margin: 51px auto;
+    }
+
+    .project {
+        /* width: 85%; */
+        /* margin: 51px auto; */
         padding: 100px 0;
         flex-direction: column-reverse;
         justify-content: space-around;
@@ -715,16 +737,28 @@ p {
         margin-bottom: 22px;
     }
 
-    /* #soundcloud-img {
-        max-width: 300px;
-    } */
 
-    .project {
+    /* .project {
         flex-direction: row;
         justify-content: space-around;
         align-content: center;
-        /* padding-top: 125px; */
-        /* padding-bottom: 125px; */
+    } */
+
+    .project-container {
+        /* width: 85%; */
+    }
+
+    .project {
+        display: grid;
+        grid-template-columns: 50% auto 44%;
+        justify-items: start;
+        justify-content: space-between;
+        max-width: 900px;
+        margin: auto;
+    }
+
+    .slideshow-container {
+        justify-self: center;
     }
 
     .slideshow-container div {
@@ -733,6 +767,10 @@ p {
 
     .project-content {
         align-self: center;
+        /* justify-self: center; */
+        /* justify-self: end; */
+
+        grid-column: 3 / 4;
     }
 
     .project img {
@@ -776,11 +814,12 @@ p {
 
 @media screen and (min-width: 1280px) {
 
-    .container {
+    .container, .project {
         max-width: 900px;
     }
 
 }
+
 
 @media screen and (max-height: 720px) {
 
@@ -796,8 +835,8 @@ p {
 
 @media screen and (min-width: 1325px) {
 
-    .container {
-        max-width: 900px;
+    .container, .project {
+        max-width: 975px;
     }
 
     /* #soundcloud-img iframe {
@@ -811,7 +850,7 @@ p {
 /* Widescreen desktops */
 @media screen and (min-width: 1600px) {
 
-    .container {
+    .container, .project {
         max-width: 1325px;
     }
 
@@ -878,6 +917,14 @@ p {
         font-size: 22px;
     }
 
+    .project {
+        grid-template-columns: 50% auto 32%;
+    }
+
+    .slideshow-container {
+        /* justify-self: end; */
+    }
+
     .project-content {
         margin-left: 0;
     }
@@ -892,8 +939,8 @@ p {
     }
 
     .project img {
-        margin: 0;
-        width: 800px;
+        margin-left: 5em;
+        width: 650px;
     }
     .flip-desc {
         max-width: 490px;
@@ -916,6 +963,14 @@ p {
     }
     .footer img {
         width: 100%;
+    }
+
+}
+
+@media screen and (min-width: 1920px) {
+
+    .project img {
+        width: 800px;
     }
 
 }
